src/test/ui/obsolete-in-place/bad.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `<-`
  --> $DIR/bad.rs:5:7
   |
LL |     x <- y;
   |       ^^ expected one of 8 possible tokens here

error: expected expression, found keyword `in`
  --> $DIR/bad.rs:10:5
   |
LL |     in(foo) { bar };
   |     ^^ expected expression

error: aborting due to 2 previous errors

